preview-card/style.css
/* Variables */
:root {
    --color-primary: hsl(47, 88%, 63%);
    --color-white: hsl(0, 0%, 100%);
    --color-gray: hsl(0, 0%, 50%);
    --color-black: hsl(0, 0%, 7%);
}

/* General Style */
html {
    font-size: 62.5%;
    box-sizing: border-box;
}

*, *::before, *::after {
    box-sizing: inherit;
}

body {
    font-size: 1.6rem;
    font-family: 'Figtree', Arial, Helvetica, sans-serif;
    color: gray;
    padding: 2rem;
    background: var(--color-primary);
    height: 100vh;
    margin: 0;
    display: flex;
    align-items: center;
    line-height: 1.5;
}

/* Typography */
h1, h2, h3 {
    color: var(--color-black);
    margin-bottom: 0;
}

h1 {
    font-weight: 800;
    font-size: 2.5rem;
}

h2 {
    font-weight: 600;
    font-size: 1.6rem;
}

/* Badge */
.badge {
    background: var(--color-primary);
    color: var(--color-black);
    padding: 0.5rem 1rem;
    border-radius: 5px;
    font-weight: 600;
}

/* Card */
.card {
    border: 1px solid black;
    padding: 2rem;
    box-shadow: 10px 10px 0 var(--color-black);
    border-radius: 15px;
    background: var(--color-white);
    max-width: 400px;
    width: 100%;
    margin: 0 auto;
}

.card__heading {
    transition: color .15s linear;
    cursor: pointer;
}

.card__heading:hover {
    color: var(--color-primary);
}

.card__img {
    width: 100%;
    border-radius: 10px;
    margin-bottom: 2rem;
}

.card__date {
    color: var(--color-black);
}

/* Publisher */
.card__publisher {
    display: flex;
    justify-content: flex-start;
    align-items: center;
}

.card__avatar {
    width: 32px;
    margin-right: 1rem;
}

